[gd_scene load_steps=7 format=3 uid="uid://csduh3drp653f"]

[ext_resource type="Script" uid="uid://syb2hy4a85sa" path="res://scripts/simple_network_synchronizer.gd" id="1_5r7yy"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_5gl4a"]
properties/0/path = NodePath(".:replicated_position")
properties/0/spawn = true
properties/0/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_n1bk6"]
properties/0/path = NodePath(".:replicated_velocity")
properties/0/spawn = true
properties/0/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_kffo4"]
properties/0/path = NodePath(".:replicated_rotation")
properties/0/spawn = true
properties/0/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ni6kc"]
properties/0/path = NodePath(".:replicated_input")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:replicated_jump_input")
properties/1/spawn = true
properties/1/replication_mode = 2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_nclsr"]
properties/0/path = NodePath(".:replicated_on_floor")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="SimpleNetworkSynchronizer" type="Node"]
script = ExtResource("1_5r7yy")
replicated_position = Vector3(nan, nan, nan)
replicated_rotation = Vector3(nan, nan, nan)

[node name="PositionSynchronizer" type="MultiplayerSynchronizer" parent="."]
delta_interval = 0.05
replication_config = SubResource("SceneReplicationConfig_5gl4a")

[node name="VelocitySynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_n1bk6")

[node name="RotationSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_kffo4")

[node name="InputSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ni6kc")

[node name="CollisionSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_nclsr")

[connection signal="delta_synchronized" from="PositionSynchronizer" to="." method="_on_position_synchronizer_delta_synchronized"]
[connection signal="delta_synchronized" from="RotationSynchronizer" to="." method="_on_rotation_synchronizer_delta_synchronized"]
